[REST] Open Cryptocurrency Endpoint.
HTTP REST endpoint exposed to open cryptocurrency accounts of a specified ticker.
