# docs/swagger.yaml
@@ -55,6 +55,13 @@ definitions:
     required:
     - offerId
     type: object
+  models.HTTPOpenCryptoAccountRequest:
+    properties:
+      ticker:
+        type: string
+    required:
+    - ticker
+    type: object
   models.HTTPOpenCurrencyAccountRequest:
     properties:
       currency:
@@ -141,6 +148,44 @@ info:
   title: FTeX, Inc. (Formerly Crypto-Bro's Bank, Inc.)
   version: 1.0.0
 paths:
+  /crypto/open:
+    post:
+      consumes:
+      - application/json
+      description: Creates a Cryptocurrency account for a specified ticker for a user
+        by creating a row in the Crypto Accounts table.
+      operationId: openCrypto
+      parameters:
+      - description: cryptocurrency ticker for new account
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/models.HTTPOpenCryptoAccountRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: a message to confirm the creation of an account
+          schema:
+            $ref: '#/definitions/models.HTTPSuccess'
+        "400":
+          description: error message with any available details in payload
+          schema:
+            $ref: '#/definitions/models.HTTPError'
+        "403":
+          description: error message with any available details in payload
+          schema:
+            $ref: '#/definitions/models.HTTPError'
+        "500":
+          description: error message with any available details in payload
+          schema:
+            $ref: '#/definitions/models.HTTPError'
+      security:
+      - ApiKeyAuth: []
+      summary: Open a Cryptocurrency account.
+      tags:
+      - crypto cryptocurrency currency open
   /fiat/deposit:
     post:
       consumes:
